
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "show_recursion_tree"
version = "0.0.3"
authors = [
    { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "print recursion trees in terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pprint_tree",
    "colorama",
]

[project.urls]
Homepage = "https://github.com/zlliu246/show_recursion_tree"
Issues = "https://github.com/zlliu246/show_recursion_tree/issues"
